feat: 添加 cpp 测试代码文件

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,9 +5,17 @@ cmake_minimum_required(VERSION 3.10)
 
 project(audio_tag_plugin_library VERSION 0.0.1 LANGUAGES C)
 
+set(CMAKE_CXX_STANDARD 11)
+
 add_library(audio_tag_plugin SHARED
-  "audio_tag_plugin.c"
+  "audio_tag_plugin.cpp"
+  "my_class.cpp"
 )
+
+# iOS 不需要加 -fPIC，Android 需要
+if (CMAKE_SYSTEM_NAME STREQUAL "Android")
+  set(CMAKE_POSITION_INDEPENDENT_CODE ON)
+endif()
 
 set_target_properties(audio_tag_plugin PROPERTIES
   PUBLIC_HEADER audio_tag_plugin.h
