--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,11 +3,19 @@
 # the plugin to fail to compile for some customers of the plugin.
 cmake_minimum_required(VERSION 3.10)
 
-project(audio_tag_plugin_library VERSION 0.0.1 LANGUAGES C)
+project(audio_tag_plugin_library VERSION 0.0.1 LANGUAGES C CXX)
+
+set(CMAKE_CXX_STANDARD 11)
 
 add_library(audio_tag_plugin SHARED
   "audio_tag_plugin.cpp"
+  "my_class.cpp"
 )
+
+# iOS 不需要加 -fPIC，Android 需要
+if (CMAKE_SYSTEM_NAME STREQUAL "Android")
+  set(CMAKE_POSITION_INDEPENDENT_CODE ON)
+endif()
 
 set_target_properties(audio_tag_plugin PROPERTIES
   PUBLIC_HEADER audio_tag_plugin.h
